# waybar-airpods

./: Cargo.toml  README.md  install.sh
client/: Cargo.toml  main.rs  status.rs
client/packets/: battery.rs  mod.rs
common/: Cargo.toml  lib.rs  status.rs  waybar.rs
daemon/: Cargo.toml  bluetooth.rs  dbus.rs  main.rs
daemon/packets/: battery.rs  in_ear.rs  metadata.rs
src/: consts.rs  main.rs  status.rs
src/packets/: battery.rs  in_ear.rs  metadata.rs
