[package]
name = "waybar-airpods"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bluer = { version = "0.17.4", features = ["full"] }
clone-macro = "0.1.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
