[workspace]
resolver = "2"
members = ["client", "common", "daemon"]

[workspace.dependencies]
anyhow = "1.0.98"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
clone-macro = "0.1.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = "1.17.0"
zbus = { version = "5.9.0", features = ["option-as-array"] }
