[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "main.rs"

[dependencies]
anyhow.workspace = true
bluer.workspace = true
clone-macro.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
