[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waybar-airpods-daemon"
path = "main.rs"

[dependencies]
common = { path = "../common" }

anyhow.workspace = true
bluer.workspace = true
clone-macro.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
zbus.workspace = true
